✨ Add AI Document Assistant (Multimodal Chatbot) project to portfolio

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
           </div>
           <a href="https://github.com/Sunnygomes/fetal-health-detection" class="btn secondary-btn" target="_blank" style="margin-top:1em;display:inline-block;">View on GitHub</a>
         </div>
+        
         <!-- Project 2 -->
         <div class="project-card">
           <h3>✋ Rock, Paper, Scissors Gesture Detection Using CNN</h3>
@@ -158,6 +159,33 @@
             <span>VGG16</span>
             <span>ResNet50</span>
           </div>
+        </div>
+        
+        <!-- Project 3 - AI Document Assistant -->
+        <div class="project-card">
+          <h3>🤖 AI Document Assistant - Multimodal Chatbot</h3>
+          <div style="height: 0.5em;"></div>
+          <p>
+            <strong>Overview:</strong> Professional AI-powered document analysis platform that handles PDFs, images, and audio files. Built with Flask, OpenAI GPT, and modern web technologies.
+          </p>
+          <ul>
+            <li>Multi-format support: PDF, Images (PNG, JPG), Audio (WAV, MP3)</li>
+            <li>AI-powered Q&A using OpenAI ChatGPT integration</li>
+            <li>OCR text extraction from images using pytesseract</li>
+            <li>Speech-to-text transcription for audio files</li>
+            <li>Professional web UI with Tailwind CSS and Flask backend</li>
+          </ul>
+          <p style="margin-bottom: 1.5em;"></p>
+          <div class="tech-stack">
+            <span>Python</span>
+            <span>Flask</span>
+            <span>OpenAI GPT</span>
+            <span>HTML/CSS</span>
+            <span>Tesseract OCR</span>
+            <span>PyPDF2</span>
+            <span>SpeechRecognition</span>
+          </div>
+          <a href="https://github.com/Sunnygomes/ai_chatbot_multimodal" class="btn secondary-btn" target="_blank" style="margin-top:1em;display:inline-block;">View on GitHub</a>
         </div>
       </div>
     </section>
