✨ Add Snap2Sell (AI-Powered eBay Listing Generator) project to portfolio

--- a/index.html
+++ b/index.html
@@ -187,6 +187,34 @@
           </div>
           <a href="https://github.com/Sunnygomes/ai_chatbot_multimodal" class="btn secondary-btn" target="_blank" style="margin-top:1em;display:inline-block;">View on GitHub</a>
         </div>
+        
+        <!-- Project 4 - Snap2Sell -->
+        <div class="project-card">
+          <h3>🛍️ Snap2Sell - AI-Powered eBay Listing Generator</h3>
+          <div style="height: 0.5em;"></div>
+          <p>
+            <strong>Overview:</strong> Automated eBay listing platform powered by GPT-4. Upload product images and generate complete eBay listings with AI-generated titles, descriptions, categories, and pricing.
+          </p>
+          <ul>
+            <li>AI-generated product titles and descriptions using OpenAI GPT-4</li>
+            <li>Automatic category mapping to eBay's taxonomy</li>
+            <li>Image upload and hosting via ImgBB API</li>
+            <li>Flask-based REST API for frontend/backend integration</li>
+            <li>MongoDB for storing listings and metadata</li>
+            <li>Web scraping for eBay category data</li>
+          </ul>
+          <p style="margin-bottom: 1.5em;"></p>
+          <div class="tech-stack">
+            <span>Python</span>
+            <span>Flask</span>
+            <span>OpenAI GPT-4</span>
+            <span>MongoDB</span>
+            <span>BeautifulSoup</span>
+            <span>eBay API</span>
+            <span>ImgBB API</span>
+          </div>
+          <a href="https://github.com/Sunnygomes/snap2sell-gpt5" class="btn secondary-btn" target="_blank" style="margin-top:1em;display:inline-block;">View on GitHub</a>
+        </div>
       </div>
     </section>
 
