--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     
     <!-- Projects Section -->
     <section class="section projects">
-      <h2 class="section-title" style="text-align:center;margin-bottom:0.5em;">Projects</h2>
+      <h2 class="section-title" style="text-align:center; margin-top: 1rem;">Projects</h2>
       <div class="project-grid">
         <!-- Project 1 -->
         <div class="project-card">
