Convert to vertical scroll layout - complete redesign

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <button id="theme-toggle" aria-label="Toggle theme">☀️</button>
   <div id="threejs-container"></div>
 
-  <div class="horizontal-scroll-wrapper">
+  <div class="main-content">
     <!-- Hero Section -->
-    <section class="section hero" style="display: flex; flex-direction: column; align-items: center; justify-content: center; position: relative;">
+    <section class="section hero" id="home" style="display: flex; flex-direction: column; align-items: center; justify-content: center; position: relative;">
       <div style="position: relative; z-index: 2;">
         <h1 class="hero-title" data-text="SUNNY HENRY GOMES" style="text-align: center;">SUNNY HENRY GOMES</h1>
         <p class="hero-subtitle" style="text-align: center; margin-top: 1rem;">
@@ -33,7 +33,7 @@
           <span style="display: inline-block; animation: fadeInUp 1s ease 0.7s both; font-size: 1.2rem; margin-top: 0.5rem;">Turning Data into Impact 🚀</span>
         </p>
       </div>
-      <div class="scroll-hint" style="animation: fadeIn 1s ease 1.5s both;">← Scroll to explore →</div>
+      <div class="scroll-hint" style="animation: fadeIn 1s ease 1.5s both;">↓ Scroll to explore ↓</div>
       
       <!-- Floating elements -->
       <div style="position: absolute; top: 20%; left: 10%; width: 100px; height: 100px; background: radial-gradient(circle, rgba(0, 245, 255, 0.1), transparent); border-radius: 50%; animation: float 6s ease-in-out infinite;"></div>
